# universal-android-debloater

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  README.md  RELEASE.md  SECURITY.md  build.rs  clippy.toml  justfile  rustfmt.toml
.claude/: settings.local.json
.github/workflows/: build_artifacts.yml  ci.yml  release.yml
resources/linux/: universal-android-debloater.desktop
resources/macos/: Info.plist  entitlements.plist
resources/windows/: installer.iss
scripts/: create-dmg.sh  generate-icons.sh  package-linux.sh  package-macos.sh  package-windows.ps1
skills/nokia-debloater/nokia-debloater/: SKILL.md
skills/nokia-debloater/nokia-debloater/scripts/: debloat.sh
skills/universal-android-debloater/: SKILL.md
src/: main.rs
src/core/: config.rs  mod.rs  save.rs  sync.rs  theme.rs  uad_lists.rs  update.rs  utils.rs
src/core/ai/: analysis.rs  groq_client.rs  mod.rs  safety.rs  suggestions.rs  types.rs
src/gui/: mod.rs  style.rs
src/gui/views/: about.rs  ai_debloat.rs  list.rs  mod.rs  settings.rs
src/gui/widgets/: modal.rs  package_row.rs
